test_case/rust-lang_rust/56765_447149832_15.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/associated-type/associated-type-projection-from-supertrait.rs","byte_start":1338,"byte_end":1343,"line_start":44,"line_end":44,"column_start":23,"column_end":28,"is_primary":true,"text":[{"text":"fn c() { dent(ModelU, Black); } //~ ERROR mismatched types","highlight_start":23,"highlight_end":28}],"label":"expected struct `Blue`, found struct `Black`","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `Blue`\n   found type `Black`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: mismatched types\n  --> /checkout/src/test/ui/associated-type/associated-type-projection-from-supertrait.rs:44:23\n   |\nLL | fn c() { dent(ModelU, Black); } //~ ERROR mismatched types\n   |                       ^^^^^ expected struct `Blue`, found struct `Black`\n   |\n   = note: expected type `Blue`\n              found type `Black`\n\n"}
[00:49:31] {"message":"mismatched types","code":{"code":"E0308","explanation":"\nThis error occurs when the compiler was unable to infer the concrete type of a\nvariable. It can occur for several cases, the most common of which is a\nmismatch in the expected type that the compiler inferred for a variable's\ninitializing expression, and the actual type explicitly assigned to the\nvariable.\n\nFor example:\n\n